# dsdna-mpra

./: .gitignore  LICENSE  README.md  pyproject.toml
dsdna_mpra/: __init__.py  boda2.py  clustering.py  config.py  dinucleotides.py  motifs.py  plots.py  thresholds.py
dsdna_mpra/cre_classifier/: __init__.py  dataloader.py  model.py  training.py
notebooks/: 01-activity_threshold.ipynb  02-cre_annotation.ipynb  03-viral_cre_genomic_context.ipynb  04-tf_motif_mapping.ipynb  05-cre_classification.ipynb
scripts/: compute_contribution_scores.py  cre_annotation.py  cre_cell_specificity.py  cre_classifier_dataset_preparation.py  cre_classifier_inference.py  cre_classifier_training.py  cre_genomic_feature_overlap.py  cre_tile_clustering.py  download_genbank_features.py  plot_mpra_activity_genomewide.py  predict_activity_control_tiles.py  process_cage_datasets.py  tf_motif_annotation.py  tf_motif_annotation_encode_cres.py  tf_motif_statistics.py  tfmodisco_postprocessing.py
