[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsdna-mpra"
version = "0.1.0"
description = "Tools for analyzing MPRA data from dsDNA libraries"
authors = [
  { name = "Joseph Finkelberg", email = "osyafinkelberg@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=2.3.1,<3.0",
  "pandas>=2.0,<3.0",
  "scipy>=1.10,<2.0",
  "matplotlib>=3.7,<4.0",
  "seaborn>=0.12,<0.14",
  "tqdm>=4.65,<5.0",
  "ushuffle>=3.1,<4.0",
  "biopython>=1.85,<2.0",
  "beautifulsoup4>=4.12,<5",
  "logomaker>=0.8,<0.9",
  "scikit-learn>=1.2,<2.0",
  "torch>=2.1,<3.0",
  "lightning>=2.0,<3.0",
  "torchmetrics>=0.11,<1.0",
  "h5py>=3.9,<4.0",
  "Pillow>=10.0,<11.0"
]

[tool.setuptools.packages.find]
where = ["."]
